--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JSON.parse and JSON.stringify wrapped in a node.js stream",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/lsc test/json-stream.ls"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,9 @@
     "bun": "0.0.10",
     "tstream": "git://github.com/jasonkuhrt/tstream",
     "delimit-stream": "0.0.1"
+  },
+  "devDependencies": {
+    "tape": "~2.0.0",
+    "LiveScript": "~1.2.0"
   }
 }
